css/main.css
/* 1. General */
body {
  margin:             0px;
  background-color:   #ebf7f7;
  font-family:        Tahoma, Arial, sans-serif;
  text-shadow:        rgba(0, 0, 0, .01) 0 0 1px;
  }

h1 {
  color:              #ea1936;
  }

h2, h3, h4, h5, h6, th {
  color:              #21a2e6;
  }

.container {
  margin:             50px auto;
  width:              75%;
  }

a {
  color:              #636363;
  }
/* End General */

/* 2. Navigation Bar */
.navbar {
  background-color:   #272727;
  height:             31px;
  }

.navbar a {
  padding:            5px 10px;
  color:              #d5d5d5;
  text-decoration:    none;
  font-size:          14px;
  display:            inline-block
  }

.navbar a:hover {
  color:              #ffffff;
  }

.navbar li.active {
  background-color:   #ebf7f7;
  }

.navbar li.active a {
  color:              #525252;
  }

.navbar ul {
  text-align:         center;
  margin:             0 auto;
  padding:            0;
  }

.navbar ul>li {
  float:              left;
  list-style:         none;
  }

.nav-container {
  margin-right:       auto;
  margin-left:        auto;
  padding-top:        5px;
  width:              75%;
  height:             27px;
  }
/* End Navigation Bar */

/* Header */
.header {
  margin-top:         -25px;
  }

.logo {
  display:            inline-block;
  }

.user {
  display:            inline-block;
  float:              right;
  }

.user>.links {
  float:              right;
  }

.user>span {
  font-size:          small;
  }

.user>.links>a {
  text-decoration:    none;
  color:              #919191;
  }
/* End Header */

.orders {
  width:              80%;
  margin-left:        auto;
  margin-right:       auto;
  }

.memberlist {
  width:              60%;
  margin-left:        auto;
  margin-right:       auto;
  }

.form {
  margin-left:        auto;
  margin-right:       auto;
  width:              50%;
  }

.form>form>div>input, .form>form>div>textarea, .form>form>div>select, .form>form>div>b {
  float:              right;
  }

.form>form>div {
  margin-bottom:      9px;
  }

table, td, th {
  border:             1px solid gray;
  padding:            5px;
  }

th {
  background-color:   #d0edeb;
  }

td, th {
  word-wrap:          break-word;
  }

td > form {
  display:            inline;
  }

table {
  border-collapse:    collapse;
  margin-left:        auto;
  margin-right:       auto;
  table-layout:       fixed;
  width:              100%;
  }

table > caption {
  text-align:         left;
  }

.orders-table {
  margin-bottom:      50px;
  }

#single_order > tbody > tr > th {
  width:              180px;
  }

.error_message {
  color:              red;
  }

.success_message {
  color:              green;
  }

.error, .success {
  text-align:         center;
  }

.testimonial {
  margin-bottom:      2px;
  }

.testimonial-name, span.title {
  color:              #21a2e6;
  font-weight:        bold;
  }

input.valid, textarea.valid {
  color:              #468847 !important;
  background-color:   #DFF0D8 !important;
  border: 1px solid   #D6E9C6 !important;
  }

input.invalid, textarea.invalid {
  color:              #B94A48 !important;
  background-color:   #F2DEDE !important;
  border: 1px solid   #EED3D7 !important;
  }

.validate-error {
  font-size:          8pt;
  margin-bottom:      8px;
  color:              red;
  display:            none;
  }

.delete_testimonial {
  display:            inline;
  }

.delete_testimonial_btn {
  background:         none;
  border:             none;
  color:              #636363;
  text-decoration:    underline;
  cursor:             pointer;
  }

#archive-order {
  display:            inline;
  }

.or {
  margin-left:        auto;
  margin-right:       auto;
  display:            table;
  font-weight:        bold;
  font-style:         italic;
  }

.pound {
  float:              right;
  margin-top:         4px;
  }

div[id*='AYAH'] {
  text-align:         center;
  margin:             30 0 20 0!important;
  }

.forgot-password {
  font-size:          small;
  }

#total-html, #delivery-charge-html {
  display:            inline;
  }

#delivery-charge {
  display:            none;
  }

#map-canvas {
  height:             400px;
  margin-top:         30px;
  margin-right:       32%;
  }

#directions-panel {
  height:             400px;
  float:              right;
  width:              30%;
  overflow:           auto;
  padding-right:      4px;
  margin-top:         14px;
  }

/* Google Maps */
.adp {
  margin-top:         -10px;
  }

.adp-text {
  padding-left:       40px;
  }

.adp-directions>tbody>tr>td:nth-child(1), .adp-directions>tbody>tr>td:nth-child(2) {
  width:              23px;
  }

.adp-directions>tbody>tr>td:nth-child(4) {
  width:              45px;
  }

.adp, .adp table, .adp-list, .gm-style div, .gm-style span, .gm-style label, .gm-style a {
  font-family:        Tahoma, Arial, sans-serif;
  }

.adp table, .adp td, .adp th {
  border:             none;
  border-bottom:      1px solid silver;
  }

.adp-placemark {
  border:             1px solid silver!important;
  }
/* End Google Maps */

span.arrow>a {
  text-decoration:    none;
  }

tr.hover {
  cursor:             pointer;
  background-color:   #CBEDFF;
  }

.small-link {
  font-size:          0.5em;
  }

#delivery-edit-row {
  display:            none;
  }

.ajax-load {
  background-image:   url('../img/spinner.svg');
  height:             16px;
  width:              16px;
  }

#order-stats {
  width:              48%;
  margin:             0;
  }

hr.fancy-line { 
  border:             0; 
  height:             1px;
  margin-top:         35px;
  }

hr.fancy-line:before {
  top:                -0.5em;
  height:             1em;
  }

hr.fancy-line:after {
  content:            '';
  height:             0.5em;
  top:                1px;
  }

hr.fancy-line:before, hr.fancy-line:after {
  content:            '';
  position:           absolute;
  width:              100%;
  }

hr.fancy-line {
  background:         radial-gradient(ellipse at center, rgba(0,122,255,0.5) 0%,rgba(0,0,0,0) 75%);
  }

div.copyright {
    width:            100%;
  }

div.copyright>div {
  text-align:         center;
  font-size:          0.7em;
  }

